--- a/_posts/2025-08-26-from-rope-teams-to-remote-teams.html
+++ b/_posts/2025-08-26-from-rope-teams-to-remote-teams.html
@@ -32,7 +32,7 @@ image:
 <h2>Climbing with <abbr title="Artificial Intelligence">AI</abbr>?</h2>
 <p>So what does this mean in today’s AI-enhanced, multicultural, distributed world? What does being roped with an AI assistant or agent even look like?</p>
 <p>In traditional rope teams, trust is built through shared risk and mutual dependence. But AI doesn’t fear falling. It doesn’t stumble. Its role is different: it amplifies human capability. That makes AI less of a rope partner and more of an essential tool you carry in your pack.</p>
-<p>Still, tools require trust too. Would you let an AI catch your error before it reaches production? Would you let it guide your next business decision? In that sense, we are tied to AI—just not in the same way we’re tied to people.</p>
+<p>Still, tools require trust to a certain degree, too. Would you let an AI catch your error before it reaches production? Would you let it guide your next business decision? In that sense, we are tied to AI—just not in the same way we’re tied to people.</p>
 
 <h2>What Mountains Teach Leaders and Teams</h2>
 <p>On Breithorn, we achieved something together because we had:</p>
@@ -57,4 +57,5 @@ image:
 <p>No, I’m not an expert alpinist—I’m a curious outdoor enthusiast exploring my limits. But I’ve spent enough time in the mountains to recognize similarities with working life. Experts like Amy C. Edmondson, Patrick Lencioni, J. Richard Hackman, Tom DeMarco, Jon R. Katzenbach, and many others have shaped my understanding of team dynamics and leadership.</p>
 <p>So I’ll ask again: Do you want to share and hold a rope with your team?</p>
 <p>Next time you’re working with your team—remote, hybrid, or AI-enhanced—ask yourself: <strong>are we truly roped together, or just walking side by side?</strong></p>
-<p><em>I dedicate this post to my mother and father who sadly suffer from Alzheimer’s disease and dementia. They turned 90 years old this summer</em> <span aria-label="red heart" role="img">❤️</span>.</p>
+<p><em>I dedicate this post to my mother and father who sadly suffer from Alzheimer’s disease and dementia. They turned 90 years old this summer</em> <span aria-label="red heart" role="img">❤️</span></p>
+<p><em>Lastly, a shout-out to all the teams I’ve been part of over the last 25 years—I couldn’t have written this without you</em> <span aria-label="folded hands" role="img">🙏</span></p>
