--- a/_posts/2025-10-09-why-co-location-is-overrated-for-team-connection.html
+++ b/_posts/2025-10-09-why-co-location-is-overrated-for-team-connection.html
@@ -61,11 +61,11 @@ image:
 
 <h3>Clear Communication</h3>
 <p><strong>Be extra clear about goals and purpose.</strong> Visualize and repeat these relentlessly.</p>
-<p><em>In practice:</em> Don’t assume shared understanding. Product teams I coached created a team canvas that answered these and other questions: <i>“Why does this team exist?”</i>, <i>“We work together best when…”</i>.</p>
+<p><em>In practice:</em> Don’t assume shared understanding. Product teams I coached created a <strong>Team Canvas</strong> that answered these and other questions: <i>“Why does this team exist?”</i>, <i>“We work together best when…”</i>.</p>
 
 <h3>Embrace Flexibility with Accountability</h3>
 <p><strong>Create space for team members to grow and find their own place</strong> within the shared purpose.</p>
-<p><em>In practice:</em> Flexibility isn’t chaos. It means respecting that one team member has elderly parents to care for while another team member works better in evening blocks. It means measuring outcomes, not hours logged.</p>
+<p><em>In practice:</em> Flexibility isn’t chaos. It means respecting that one team member has elderly parents to care for while another team member works better in evening blocks. It means measuring <strong>outcomes</strong>, not hours logged.</p>
 <p>Aren’t these the same practices for co-located teams? Yes. But you need to be <strong>extra intentional about them</strong> with distributed multicultural teams. Co-location can hide weak practices. Distribution demands strong ones.</p>
 
 <h2>What This Means for Leaders</h2>
