--- a/_posts/2025-10-09-why-co-location-is-overrated-for-team-connection.html
+++ b/_posts/2025-10-09-why-co-location-is-overrated-for-team-connection.html
@@ -12,7 +12,7 @@ image:
 <figure>
   <img src="{{site.imgpath}}/connectedness_location_matrix.jpg" alt="" />  
   <figcaption>
-    <p class="figcaption">The Connectedness/Location Matrix.</p>
+    <p class="figcaption"><strong>The Connectedness/Location Matrix</strong> by Aki Kärkkäinen.</p>
   </figcaption>
 </figure>
 
@@ -82,3 +82,6 @@ image:
 </ul>
 
 <p>Start by listening and understanding. The answers will show you where to begin.</p>
+
+<h2>Footnote</h2>
+<p>While research on team cohesion and distributed work is extensive, this particular team connection framework—<strong>The Connectedness/Location Matrix</strong>—emerged from my work with distributed multicultural teams over the years.</p>
