Add excerpts in recent posts

--- a/_posts/2025-11-24-principles-that-guide-your-work.html
+++ b/_posts/2025-11-24-principles-that-guide-your-work.html
@@ -1,6 +1,6 @@
 ---
 title: Principles That Guide Your Work
-excerpt: 
+excerpt: Over the years, I’ve collected principles that shape how I approach everything. What’s one principle that guides your work?
 date: '2025-11-24 15:13:34 +0100'
 categories:
 - Agile
