--- a/_posts/2025-11-28-we-cannot-leave-a-process-alone.html
+++ b/_posts/2025-11-28-we-cannot-leave-a-process-alone.html
@@ -1,6 +1,6 @@
 ---
 title: We Cannot Leave a Process Alone
-excerpt: 
+excerpt: Processes naturally decay. You can’t set them and forget them. Continuous improvement is the only way to prevent erosion.
 date: '2025-11-28 13:45:24 +0100'
 categories:
 - Agile
